display `pre>code` as block to avoid whitespaces

--- a/styles/_entries.scss
+++ b/styles/_entries.scss
@@ -129,6 +129,7 @@ code
 }
 pre > code
 {
+  display: block;
   border: none;
   background-color: transparent;
 }
